--- a/src/content/docs/letter/001.mdx
+++ b/src/content/docs/letter/001.mdx
@@ -1,6 +1,8 @@
 ---
 title: Quitting Academic Career
 description: Letter from Blessed Seraphim to his parents, Frank Rose and Esther Rose.
+og:
+  image: /og/001.png
 ---
 
 <div style={{textAlign:'right', fontFamily:'monospace'}}>Letter no. 001</div>
