halo-glow-glimmer-shimmer

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ template: splash
 hero:
   tagline: The corpus of known letters from Blessed Seraphim of Platina to contemporary correspondents.
   image:
-    file: ../../assets/blessed-seraphim-letters.jpg
+    file: ../../assets/seraphim-halo-letters-sm.gif
   actions:
     - text: Read the Letters
       link: /letter/001
